@@ -1,5 +1,6 @@
 Mar 29, 2022
   removed obsolete property 'variantTable'
+  added mouse, pig and green monkey assemblies for processing
 
 Jul 21, 2021
   added rat assembly 7.2
